manifests/dummy-app2/app2-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app2-fargate-ns

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-nginx-deployment
  namespace: app2-fargate-ns
  labels:
    app: app2-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-nginx
  template:
    metadata:
      labels:
        app: app2-nginx
    spec:
      containers:
        - name: app2-nginx
          image: 829007908826.dkr.ecr.ap-south-1.amazonaws.com/eks/nginx:2.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1000m"

---

apiVersion: v1
kind: Service
metadata:
  name: app2-nginx-nodeport-service
  namespace: app2-fargate-ns
  labels:
    app: app2-nginx
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
   alb.ingress.kubernetes.io/healthcheck-path: /app2/index.html
spec:
  type: NodePort
  selector:
    app: app2-nginx
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress-resources
  namespace: app2-fargate-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: shared-external-alb
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /app2/index.html
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # SSL Annotations
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
    # alb.ingress.kubernetes.io/listen-ports: [{'HTTPS':443, 'HTTP':80}]
    # alb.ingress.kubernetes.io/certificate-arn:
    # Ingress Groups
    alb.ingress.kubernetes.io/group.name: app-ingress-group
    alb.ingress.kubernetes.io/group.order: '20'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: app-default-alb-ingress-class
  rules:
    - http:
        paths:
        - path: /app2
          pathType: Prefix
          backend:
            service:
              name: app2-nginx-nodeport-service
              port:
                number: 80
